fix ce; add simple triangle rasterizer

--- a/src/app/cli_ras/CMakeLists.txt
+++ b/src/app/cli_ras/CMakeLists.txt
@@ -14,6 +14,8 @@ FOREACH(_SRC IN ITEMS ${CLI_RAS_SRC})
     GET_FILENAME_COMPONENT(CLI_RAS_SRC "${_SRC}" PATH)
     STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/cli_ras" "cli_ras/include" _GRP_PATH "${CLI_RAS_SRC}")
     STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "cli_ras/src" _GRP_PATH "${_GRP_PATH}")
+    STRING(REPLACE "${AGZCommon_SOURCE_DIR}/include/agz/common" "common/include" _GRP_PATH "${_GRP_PATH}")
+    STRING(REPLACE "${AGZCommon_SOURCE_DIR}/src" "common/src" _GRP_PATH "${_GRP_PATH}")
     STRING(REPLACE "${Rasterizer_PROJECT_DIR}/include/agz/rasterizer" "rasterizer/include" _GRP_PATH "${_GRP_PATH}")
     STRING(REPLACE "${Rasterizer_PROJECT_DIR}/src" "rasterizer/src" _GRP_PATH "${_GRP_PATH}")
     STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
@@ -25,5 +27,6 @@ SET(CLI_RAS_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/")
 TARGET_INCLUDE_DIRECTORIES(CLI_RAS PRIVATE ${MISC_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI_RAS PRIVATE ${CLI_RAS_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI_RAS PRIVATE ${AGZUtils_INCLUDE_DIRS})
+TARGET_INCLUDE_DIRECTORIES(CLI_RAS PRIVATE ${Rasterizer_INCLUDE_DIRS})
 
 TARGET_LINK_LIBRARIES(CLI_RAS AGZUtils ${STDFS_LD_LIB})
