--- a/src/core/rasterizer/CMakeLists.txt
+++ b/src/core/rasterizer/CMakeLists.txt
@@ -8,6 +8,6 @@ FILE(GLOB_RECURSE RASTERIZER_SRC
 		"${PROJECT_SOURCE_DIR}/include/agz/rasterizer/*.h"
 		"${PROJECT_SOURCE_DIR}/include/agz/rasterizer/*.inl")
 
-SET(RASTERIZER_SRC ${RASTERIZER_SRC} PARENT_SCOPE)
-SET(Rasterizer_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/" PARENT_SCOPE)
+SET(RASTERIZER_SRC ${RASTERIZER_SRC} ${AGZ_COMMON_SRC} PARENT_SCOPE)
+SET(Rasterizer_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/" "${AGZCommon_INCLUDE_DIRS}" PARENT_SCOPE)
 SET(Rasterizer_PROJECT_DIR ${PROJECT_SOURCE_DIR} PARENT_SCOPE)
