add lum_classify && reverse texture

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,11 +25,14 @@ SET(CMAKE_CXX_STANDARD 17)
 
 IF(MSVC)
     ADD_DEFINITIONS(-D_SILENCE_CXX17_OLD_ALLOCATOR_MEMBERS_DEPRECATION_WARNING)
+	ADD_DEFINITIONS(-D_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING)
 ENDIF()
 
 IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -pthread")
-    SET(STDFS_LD_LIB "c++fs")
+	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
+		SET(STDFS_LD_LIB "c++fs")
+	ENDIF()
     SET(CMAKE_EXE_LINKER_FLAGS "-ldl")
 ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
