move to modern cmake

--- a/src/app/material_explorer/CMakeLists.txt
+++ b/src/app/material_explorer/CMakeLists.txt
@@ -14,19 +14,31 @@ FOREACH(_SRC IN ITEMS ${MaterialExplorer_SRC})
     SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
 ENDFOREACH()
 
-SET(MaterialExplorer_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/")
+IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    TARGET_COMPILE_OPTIONS(MaterialExplorer PUBLIC -stdlib=libc++)
+ENDIF()
 
-ADD_DEFINITIONS(-DAGZ_LOG_LEVEL=2)
-ADD_DEFINITIONS(-DIMGUI_IMPL_OPENGL_LOADER_GLEW)
+SET_PROPERTY(TARGET MaterialExplorer PROPERTY CXX_STANDARD 17)
+SET_PROPERTY(TARGET MaterialExplorer PROPERTY CXX_STANDARD_REQUIRED ON)
+
+IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
+		SET(STDFS_LD_LIB "c++fs")
+	ENDIF()
+    SET(LINKER_FLAGS "-ldl -pthread -stdlib=libc++")
+ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    SET(STDFS_LD_LIB "stdc++fs")
+    SET(LINKER_FLAGS "-ldl -pthread")
+ENDIF()
+
+TARGET_COMPILE_DEFINITIONS(MaterialExplorer PUBLIC IMGUI_IMPL_OPENGL_LOADER_GLEW)
 
 IF(MSVC)
-	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
+	TARGET_COMPILE_DEFINITIONS(MaterialExplorer PUBLIC _CRT_SECURE_NO_WARNINGS)
 ENDIF()
 
 TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${MISC_INCLUDE_DIRS})
-TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${MaterialExplorer_INCLUDE_DIRS})
-TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${AGZUtils_INCLUDE_DIRS})
+TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE "${PROJECT_SOURCE_DIR}/include/")
 TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${GLEW_INCLUDE_DIRS})
 
-TARGET_LINK_LIBRARIES(MaterialExplorer OpenGL::GL AGZUtils ${STDFS_LD_LIB} glew_s glfw)
-ADD_DEPENDENCIES(MaterialExplorer glew_s)
+TARGET_LINK_LIBRARIES(MaterialExplorer OpenGL::GL AGZUtils ${STDFS_LD_LIB} glew_s glfw ${LINKER_FLAGS})
