--- a/src/core/tracer/CMakeLists.txt
+++ b/src/core/tracer/CMakeLists.txt
@@ -18,12 +18,28 @@ FOREACH(_SRC IN ITEMS ${TRACER_SRC})
     SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
 ENDFOREACH()
 
+IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    TARGET_COMPILE_OPTIONS(Tracer PUBLIC -stdlib=libc++)
+ENDIF()
+
+SET_PROPERTY(TARGET Tracer PROPERTY CXX_STANDARD 17)
+SET_PROPERTY(TARGET Tracer PROPERTY CXX_STANDARD_REQUIRED ON)
+
+IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
+		SET(STDFS_LD_LIB "c++fs")
+	ENDIF()
+    SET(LINKER_FLAGS "-ldl -pthread -stdlib=libc++")
+ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    SET(STDFS_LD_LIB "stdc++fs")
+    SET(LINKER_FLAGS "-ldl -pthread")
+ENDIF()
+
 SET(Tracer_INCLUDE_DIRS
 	"${PROJECT_SOURCE_DIR}/include/"
 	"${AGZUtils_INCLUDE_DIRS}"
 	"${MISC_INCLUDE_DIRS}"
-	"${EMBREE_INCLUDE_DIRS}"
-	CACHE STRING "")
+	"${EMBREE_INCLUDE_DIRS}")
 
 IF(USE_EMBREE)
 	SET(Tracer_INCLUDE_DIRS ${Tracer_INCLUDE_DIRS} ${EMBREE_INCLUDE_DIRS})
@@ -36,4 +52,4 @@ ENDIF()
 
 TARGET_INCLUDE_DIRECTORIES(Tracer PUBLIC ${Tracer_INCLUDE_DIRS})
 
-TARGET_LINK_LIBRARIES(Tracer PUBLIC AGZUtils ${STDFS_LD_LIB} ${Tracer_OIDN_LIB} ${Tracer_EMBREE_LIB} spdlog)
+TARGET_LINK_LIBRARIES(Tracer PUBLIC AGZUtils ${STDFS_LD_LIB} ${Tracer_OIDN_LIB} ${Tracer_EMBREE_LIB} spdlog ${LINKER_FLAGS})
