--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,24 +16,10 @@ IF(NOT CMAKE_BUILD_TYPE)
     SET(CMAKE_BUILD_TYPE "Release" CACHE STRING "Options: Debug Release RelWithDebInfo MinSizeRel." FORCE)
 ENDIF()
 
-SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
-SET(CMAKE_CXX_STANDARD 17)
-
-IF(MSVC)
-    ADD_DEFINITIONS(-D_SILENCE_CXX17_OLD_ALLOCATOR_MEMBERS_DEPRECATION_WARNING)
-	ADD_DEFINITIONS(-D_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING)
-ENDIF()
-
 IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -pthread")
-	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
-		SET(STDFS_LD_LIB "c++fs")
-	ENDIF()
-    SET(CMAKE_EXE_LINKER_FLAGS "-ldl")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
 ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
-    SET(STDFS_LD_LIB "stdc++fs")
-    SET(CMAKE_EXE_LINKER_FLAGS "-ldl")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 ENDIF()
 
 ############## embree
