--- a/src/app/cli/CMakeLists.txt
+++ b/src/app/cli/CMakeLists.txt
@@ -17,6 +17,25 @@ FOREACH(_SRC IN ITEMS ${CLI_SRC})
     SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
 ENDFOREACH()
 
+IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    TARGET_COMPILE_OPTIONS(CLI PUBLIC "-stdlib=libc++ -pthread")
+ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    TARGET_COMPILE_OPTIONS(CLI PUBLIC "-pthread")
+ENDIF()
+
+SET_PROPERTY(TARGET CLI PROPERTY CXX_STANDARD 17)
+SET_PROPERTY(TARGET CLI PROPERTY CXX_STANDARD_REQUIRED ON)
+
+IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
+		SET(STDFS_LD_LIB "c++fs")
+	ENDIF()
+    SET(LINKER_FLAGS "-ldl -pthread -stdlib=libc++")
+ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    SET(STDFS_LD_LIB "stdc++fs")
+    SET(LINKER_FLAGS "-ldl -pthread")
+ENDIF()
+
 TARGET_INCLUDE_DIRECTORIES(CLI PUBLIC "${PROJECT_SOURCE_DIR}/include")
 
-TARGET_LINK_LIBRARIES(CLI Tracer AGZUtils ${STDFS_LD_LIB})
+TARGET_LINK_LIBRARIES(CLI Tracer AGZUtils ${STDFS_LD_LIB} ${LINKER_FLAGS})
