fix ce with libstdc++

--- a/src/app/cli/CMakeLists.txt
+++ b/src/app/cli/CMakeLists.txt
@@ -18,7 +18,7 @@ FOREACH(_SRC IN ITEMS ${CLI_SRC})
 ENDFOREACH()
 
 IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    TARGET_COMPILE_OPTIONS(CLI PUBLIC "-stdlib=libc++ -pthread")
+    TARGET_COMPILE_OPTIONS(CLI PUBLIC "-pthread")
 ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     TARGET_COMPILE_OPTIONS(CLI PUBLIC "-pthread")
 ENDIF()
@@ -28,14 +28,14 @@ SET_PROPERTY(TARGET CLI PROPERTY CXX_STANDARD_REQUIRED ON)
 
 IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
-		SET(STDFS_LD_LIB "c++fs")
+		SET(LINKER_FLAGS "-lc++fs -ldl -pthread")
+	ELSE()
+		SET(LINKER_FLAG "-lstdc++fs -ldl -pthread")
 	ENDIF()
-    SET(LINKER_FLAGS "-ldl -pthread -stdlib=libc++")
 ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    SET(STDFS_LD_LIB "stdc++fs")
-    SET(LINKER_FLAGS "-ldl -pthread")
+    SET(LINKER_FLAGS "-lstdc++fs -ldl -pthread")
 ENDIF()
 
 TARGET_INCLUDE_DIRECTORIES(CLI PUBLIC "${PROJECT_SOURCE_DIR}/include")
 
-TARGET_LINK_LIBRARIES(CLI Tracer AGZUtils ${STDFS_LD_LIB} ${LINKER_FLAGS})
+TARGET_LINK_LIBRARIES(CLI Tracer AGZUtils ${LINKER_FLAGS})
