--- a/src/app/material_explorer/CMakeLists.txt
+++ b/src/app/material_explorer/CMakeLists.txt
@@ -14,21 +14,17 @@ FOREACH(_SRC IN ITEMS ${MaterialExplorer_SRC})
     SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
 ENDFOREACH()
 
-IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    TARGET_COMPILE_OPTIONS(MaterialExplorer PUBLIC -stdlib=libc++)
-ENDIF()
-
 SET_PROPERTY(TARGET MaterialExplorer PROPERTY CXX_STANDARD 17)
 SET_PROPERTY(TARGET MaterialExplorer PROPERTY CXX_STANDARD_REQUIRED ON)
 
 IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
-		SET(STDFS_LD_LIB "c++fs")
+		SET(LINKER_FLAGS "-lc++fs -ldl -pthread")
+	ELSE()
+		SET(LINKER_FLAG "-lstdc++fs -ldl -pthread")
 	ENDIF()
-    SET(LINKER_FLAGS "-ldl -pthread -stdlib=libc++")
 ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    SET(STDFS_LD_LIB "stdc++fs")
-    SET(LINKER_FLAGS "-ldl -pthread")
+    SET(LINKER_FLAGS "-lstdc++fs -ldl -pthread")
 ENDIF()
 
 TARGET_COMPILE_DEFINITIONS(MaterialExplorer PUBLIC IMGUI_IMPL_OPENGL_LOADER_GLEW)
@@ -41,4 +37,4 @@ TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${MISC_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE "${PROJECT_SOURCE_DIR}/include/")
 TARGET_INCLUDE_DIRECTORIES(MaterialExplorer PRIVATE ${GLEW_INCLUDE_DIRS})
 
-TARGET_LINK_LIBRARIES(MaterialExplorer OpenGL::GL AGZUtils ${STDFS_LD_LIB} glew_s glfw ${LINKER_FLAGS})
+TARGET_LINK_LIBRARIES(MaterialExplorer OpenGL::GL AGZUtils glew_s glfw ${LINKER_FLAGS})
