--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ PROJECT(Atrc)
 OPTION(USE_EMBREE              "use embree for finding triangle mesh intersection" OFF)
 OPTION(USE_OIDN                "use oidn denoiser"                                 OFF)
 OPTION(BUILD_MATERIAL_EXPLORER "build material explorer or not"                    OFF)
+OPTION(BUILD_GUI               "build graphics user interface"                     OFF)
 
 ############## CXX properties
 
@@ -30,6 +31,16 @@ IF(USE_OIDN)
     INCLUDE("${PROJECT_SOURCE_DIR}/cmake/cmake-oidn")
 ENDIF()
 
+############## qt
+
+IF(BUILD_GUI)
+    FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Widgets)
+    SET_PROPERTY(GLOBAL PROPERTY AUTOGEN_SOURCE_GROUP auto_moc)
+    SET(CMAKE_AUTOMOC ON)
+    SET(CMAKE_AUTOUIC ON)
+    SET(CMAKE_AUTORCC ON)
+ENDIF()
+
 ############## necessory submodules
 
 SET(MISC_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/lib/misc/)
@@ -41,11 +52,16 @@ SET_TARGET_PROPERTIES(spdlog AGZUtils PROPERTIES FOLDER "ThirdParty")
 ADD_SUBDIRECTORY(src/core/tracer)
 ADD_SUBDIRECTORY(src/app/cli)
 
-############## glfw && material explorer
-
-IF(BUILD_MATERIAL_EXPLORER)
+IF(BUILD_MATERIAL_EXPLORER OR BUILD_SCENE_EDITOR)
     INCLUDE("${PROJECT_SOURCE_DIR}/cmake/cmake-glfw")
 	INCLUDE("${PROJECT_SOURCE_DIR}/cmake/cmake-glew")
 	FIND_PACKAGE(OpenGL REQUIRED)
+ENDIF()
+
+IF(BUILD_MATERIAL_EXPLORER)
     ADD_SUBDIRECTORY(src/app/material_explorer)
+ENDIF()
+
+IF(BUILD_GUI)
+    ADD_SUBDIRECTORY(src/app/gui)
 ENDIF()
