impl editor arch

--- a/src/core/tracer/CMakeLists.txt
+++ b/src/core/tracer/CMakeLists.txt
@@ -40,6 +40,7 @@ SET(Tracer_INCLUDE_DIRS
 IF(USE_EMBREE)
 	SET(Tracer_INCLUDE_DIRS ${Tracer_INCLUDE_DIRS} ${EMBREE_INCLUDE_DIRS})
 	SET(Tracer_EMBREE_LIB ${EMBREE_LIBRARIES})
+	TARGET_COMPILE_DEFINITIONS(Tracer PUBLIC USE_EMBREE)
 ENDIF()
 
 IF(USE_OIDN)
