--- a/src/tracer/CMakeLists.txt
+++ b/src/tracer/CMakeLists.txt
@@ -39,7 +39,7 @@ SET(Tracer_INCLUDE_DIRS
 
 IF(USE_EMBREE)
 	SET(Tracer_INCLUDE_DIRS ${Tracer_INCLUDE_DIRS} ${EMBREE_INCLUDE_DIRS})
-	SET(Tracer_EMBREE_LIB ${EMBREE_LIBRARIES})
+	SET(Tracer_EMBREE_LIB ${EMBREE_LIBRARY})
 	TARGET_COMPILE_DEFINITIONS(Tracer PUBLIC USE_EMBREE)
 ENDIF()
 
