remove using of 'tracer.h' in editor; support launching renderer in editor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,10 @@ IF(BUILD_CLI)
     ADD_SUBDIRECTORY(src/cli)
 ENDIF()
 
+IF(BUILD_GUI OR BUILD_EDITOR)
+	ADD_SUBDIRECTORY(src/gui_common)
+ENDIF()
+
 IF(BUILD_GUI)
     ADD_SUBDIRECTORY(src/gui)
 ENDIF()
