--- a/src/gui_common/CMakeLists.txt
+++ b/src/gui_common/CMakeLists.txt
@@ -1,22 +1,22 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
-PROJECT(GUI)
+PROJECT(GUI-COMMON)
 
 FILE(GLOB_RECURSE TARGET_SRC
 		"${PROJECT_SOURCE_DIR}/src/*.cpp"
 		"${PROJECT_SOURCE_DIR}/include/*.h")
-ADD_EXECUTABLE(GUI ${TARGET_SRC})
+ADD_LIBRARY(GUICommon STATIC ${TARGET_SRC})
 
 FOREACH(_SRC IN ITEMS ${TARGET_SRC})
     GET_FILENAME_COMPONENT(TARGET_SRC "${_SRC}" PATH)
-    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/gui" "include" _GRP_PATH "${TARGET_SRC}")
+    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/gui_common" "include" _GRP_PATH "${TARGET_SRC}")
     STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "src" _GRP_PATH "${_GRP_PATH}")
     STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
     SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
 ENDFOREACH()
 
-SET_PROPERTY(TARGET GUI PROPERTY CXX_STANDARD 17)
-SET_PROPERTY(TARGET GUI PROPERTY CXX_STANDARD_REQUIRED ON)
+SET_PROPERTY(TARGET GUICommon PROPERTY CXX_STANDARD 17)
+SET_PROPERTY(TARGET GUICommon PROPERTY CXX_STANDARD_REQUIRED ON)
 
 IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
@@ -29,7 +29,11 @@ ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 ENDIF()
 
 IF(MSVC)
-	TARGET_COMPILE_DEFINITIONS(GUI PUBLIC _CRT_SECURE_NO_WARNINGS)
+	TARGET_COMPILE_DEFINITIONS(GUICommon PUBLIC _CRT_SECURE_NO_WARNINGS)
 ENDIF()
 
-TARGET_LINK_LIBRARIES(GUI GUICommon Qt5::Widgets ${LINKER_FLAGS})
+TARGET_INCLUDE_DIRECTORIES(GUICommon PUBLIC ${MISC_INCLUDE_DIRS})
+TARGET_INCLUDE_DIRECTORIES(GUICommon PUBLIC "${PROJECT_SOURCE_DIR}/include/")
+TARGET_INCLUDE_DIRECTORIES(GUICommon PUBLIC ${GLEW_INCLUDE_DIRS})
+
+TARGET_LINK_LIBRARIES(GUICommon Tracer Factory AGZUtils Qt5::Widgets ${LINKER_FLAGS})
