upgrade im3d; fix ce with clang-cl

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -18,14 +18,16 @@ ENDFOREACH()
 SET_PROPERTY(TARGET GUI PROPERTY CXX_STANDARD 17)
 SET_PROPERTY(TARGET GUI PROPERTY CXX_STANDARD_REQUIRED ON)
 
-IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
-		SET(LINKER_FLAGS "-lc++fs -ldl -pthread")
-	ELSE()
-		SET(LINKER_FLAG "-lstdc++fs -ldl -pthread")
+IF(NOT WIN32)
+	IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+		IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
+			SET(LINKER_FLAGS "-lc++fs -ldl -pthread")
+		ELSE()
+			SET(LINKER_FLAG "-lstdc++fs -ldl -pthread")
+		ENDIF()
+	ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+		SET(LINKER_FLAGS "-lstdc++fs -ldl -pthread")
 	ENDIF()
-ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    SET(LINKER_FLAGS "-lstdc++fs -ldl -pthread")
 ENDIF()
 
 IF(MSVC)
