--- a/src/gui_common/CMakeLists.txt
+++ b/src/gui_common/CMakeLists.txt
@@ -18,16 +18,6 @@ ENDFOREACH()
 SET_PROPERTY(TARGET GUICommon PROPERTY CXX_STANDARD 17)
 SET_PROPERTY(TARGET GUICommon PROPERTY CXX_STANDARD_REQUIRED ON)
 
-IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
-		SET(LINKER_FLAGS "-lc++fs -ldl -pthread")
-	ELSE()
-		SET(LINKER_FLAG "-lstdc++fs -ldl -pthread")
-	ENDIF()
-ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    SET(LINKER_FLAGS "-lstdc++fs -ldl -pthread")
-ENDIF()
-
 IF(MSVC)
 	TARGET_COMPILE_DEFINITIONS(GUICommon PUBLIC _CRT_SECURE_NO_WARNINGS)
 ENDIF()
@@ -36,4 +26,4 @@ TARGET_INCLUDE_DIRECTORIES(GUICommon PUBLIC ${MISC_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(GUICommon PUBLIC "${PROJECT_SOURCE_DIR}/include/")
 TARGET_INCLUDE_DIRECTORIES(GUICommon PUBLIC ${GLEW_INCLUDE_DIRS})
 
-TARGET_LINK_LIBRARIES(GUICommon Tracer Factory AGZUtils Qt5::Widgets ${LINKER_FLAGS})
+TARGET_LINK_LIBRARIES(GUICommon Tracer Factory AGZUtils Qt5::Widgets)
