--- a/src/tracer/CMakeLists.txt
+++ b/src/tracer/CMakeLists.txt
@@ -21,16 +21,6 @@ ENDFOREACH()
 SET_PROPERTY(TARGET Tracer PROPERTY CXX_STANDARD 17)
 SET_PROPERTY(TARGET Tracer PROPERTY CXX_STANDARD_REQUIRED ON)
 
-IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
-		SET(LINKER_FLAGS "-lc++fs -ldl -pthread")
-	ELSE()
-		SET(LINKER_FLAG "-lstdc++fs -ldl -pthread")
-	ENDIF()
-ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    SET(LINKER_FLAGS "-lstdc++fs -ldl -pthread")
-ENDIF()
-
 SET(Tracer_INCLUDE_DIRS
 	"${PROJECT_SOURCE_DIR}/include/"
 	"${AGZUtils_INCLUDE_DIRS}"
@@ -48,4 +38,4 @@ IF(USE_OIDN)
 ENDIF()
 TARGET_INCLUDE_DIRECTORIES(Tracer PUBLIC ${Tracer_INCLUDE_DIRS})
 
-TARGET_LINK_LIBRARIES(Tracer PUBLIC AGZUtils spdlog ${Tracer_OIDN_LIB} ${Tracer_EMBREE_LIB} ${LINKER_FLAGS})
+TARGET_LINK_LIBRARIES(Tracer PUBLIC AGZUtils spdlog ${Tracer_OIDN_LIB} ${Tracer_EMBREE_LIB})
