--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -26,14 +26,16 @@ ENDIF()
 SET_PROPERTY(TARGET CLI PROPERTY CXX_STANDARD 17)
 SET_PROPERTY(TARGET CLI PROPERTY CXX_STANDARD_REQUIRED ON)
 
-IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-	IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
-		SET(LINKER_FLAGS "-lc++fs -ldl -pthread")
-	ELSE()
-		SET(LINKER_FLAG "-lstdc++fs -ldl -pthread")
+IF(NOT WIN32)
+	IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+		IF(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
+			SET(LINKER_FLAGS "-lc++fs -ldl -pthread")
+		ELSE()
+			SET(LINKER_FLAG "-lstdc++fs -ldl -pthread")
+		ENDIF()
+	ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+		SET(LINKER_FLAGS "-lstdc++fs -ldl -pthread")
 	ENDIF()
-ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    SET(LINKER_FLAGS "-lstdc++fs -ldl -pthread")
 ENDIF()
 
 TARGET_INCLUDE_DIRECTORIES(CLI PUBLIC "${PROJECT_SOURCE_DIR}/include")
