--- a/src/gui_common/CMakeLists.txt
+++ b/src/gui_common/CMakeLists.txt
@@ -26,4 +26,4 @@ TARGET_INCLUDE_DIRECTORIES(GUICommon PUBLIC ${MISC_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(GUICommon PUBLIC "${PROJECT_SOURCE_DIR}/include/")
 TARGET_INCLUDE_DIRECTORIES(GUICommon PUBLIC ${GLEW_INCLUDE_DIRS})
 
-TARGET_LINK_LIBRARIES(GUICommon Tracer Factory AGZUtils Qt5::Widgets)
+TARGET_LINK_LIBRARIES(GUICommon Tracer Factory AGZUtils Qt5::Core Qt5::Widgets)
